Fixed link jumping issue by adding javascript script to end of index.html

--- a/styles.css
+++ b/styles.css
@@ -13,8 +13,12 @@ body {
 .sidebar {
     background-color: turquoise;
     width: 200px;
-    padding: 20px;
+    padding: 10px;
     box-shadow: 2px 0 5px rgba(0,0,0,0.1);
+    position: fixed;
+    height: 100%;
+    top: 0;
+    left: 0;
 }
 
 .sidebar ul {
@@ -24,12 +28,13 @@ body {
 }
 
 .sidebar li {
-    margin: 15px 0;
+    margin: 20px 0;
 }
 
 .sidebar a {
     text-decoration: none;
-    font-size: large;
+    font-size: x-large;
+    
 }
 
 .sidebar a:hover {
@@ -38,10 +43,17 @@ body {
 
 main {
     flex: 1;
+    margin-left: 220px;
     padding: 20px
+    
 }
 
 .separator {
     border: 1px solid #ccc;
     margin: 20px 0;
+}
+
+.top-left a {
+    font-size: xx-large;
+    text-decoration: none;
 }
